# quantum-as-a-service

./: .gitignore  .typos.toml  LICENSE  MANIFEST.in  README.rst  pyproject.toml  typos.toml  zensical.toml
.github/workflows/: build.yml
backend_scripts/: backend_service_executor.py
backend_scripts/backend_scripts_iqm/: backend_service.service  decrypt.sh  run.sh  run_standalone.py  run_standalone.sh
backend_scripts/internal_accounting_table/: docker-compose.yml  internal_accounting_table_diagram.mermaid  internal_accounting_table_pgsql_init.sql
backend_scripts_iqm/: backend_service.py  backend_service.service  run.sh  run_standalone.sh
backend_scripts_slurm/: set_new_account.sh
docs/: api.md  architecture.md  index.md  installation.md  usage.md
example/: example_of_shots_visualisation_histogram.html  iqm_pulla_tutorial.ipynb  randomnumbers_Qprovider.ipynb  randomnumbers_Qprovider.py  randomnumbers_Qprovider_MQSS.ipynb  randomnumbers_Qprovider_aersim.ipynb  randomnumbers_Qprovider_with_workflow.ipynb  times_of_30_runs_of_one_circuit.csv
experimental_examples/: iqm_pulla_tutorial.ipynb  iqm_pulse_tutorial.ipynb
qaas/: backend.py  backend_iqm.py  backend_metadata.py  client.py  provider.py  qpulla.py  utils.py
src/qaas/client/: __init__.py  backend.py  backend_iqm.py  backend_metadata.py  client.py  cryption_control.py  provider.py  qpulla.py  utils.py
src/qaas/client/example/: ansatz_quantum.qasm2  factorization_optimization_example.ipynb  groover_attempt.qasm2  iqm_pulla_tutorial.ipynb  iqm_pulla_tutorial_dev.ipynb  randomnumbers_Qprovider.ipynb  randomnumbers_Qprovider.py  randomnumbers_Qprovider_dev.ipynb  randomnumbers_Qprovider_with_workflow.ipynb
src/qaas/iqm_backend/: __init__.py  backend_env_variables.py  backend_service.py  backend_service_accounting_info.py  backend_service_consumption.py  internal_accounting_table_models.py
